# autoresearch-timeseries-agent

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: baseline.yaml  csv_linear.yaml  csv_transformer.yaml  linear.yaml  lstm.yaml  lstm_blocked_shuffle.yaml  lstm_longer_train.yaml  lstm_medium.yaml  lstm_normalized.yaml  lstm_scaled.yaml  lstm_small.yaml  persistence.yaml  transformer_blocked_shuffle.yaml  transformer_scaled.yaml
configs/agent_generated/: agent_csv_linear_alpha_0_1_chronological.yaml  agent_csv_lstm_small_chronological.yaml  agent_csv_transformer_small_chronological.yaml  agent_linear_alpha_0_1_chronological.yaml  agent_lstm_small_chronological.yaml  agent_transformer_shift_probe_chronological.yaml
docs/: architecture.md  interview_notes.md  limitations.md  method_notes.md  repo_description.md  reproducibility.md
reports/: final_portfolio_review.md  model_comparison.json  model_comparison.md  project_summary.json  project_summary.md  repo_health_check.json  repo_health_check.md
scripts/: create_example_csv_dataset.py
src/autoresearch_timeseries_agent/: main.py
src/autoresearch_timeseries_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/autoresearch_timeseries_agent/agents/: __init__.py  experiment_agent.py  run_agent.py
src/autoresearch_timeseries_agent/data/: __init__.py  (+3 more)
tests/: test_agent.py  test_compare_runs.py  test_csv_loader.py  test_data.py  test_dataset_diagnostics.py  test_experiment_runner.py  test_metrics.py  test_models.py  test_reporting.py  test_runner.py
(+18 files in other folders)
